tests/integration/errors/test_thread_error_private_nonprim.sn
// Test: Compile error - private function returns array (non-primitive)
// Expected error: Private function can only return primitive types

private fn build_array(): int[] =>
    return {1, 2, 3}  // ERROR: private can only return primitives

fn main(): void =>
    var r: int[] = &build_array()
    r!
    print($"Length: {r.length}\n")
